# scotland2

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  copy.ps1  qpm.json  qpm.shared.json  setup_linux.sh
.github/workflows/: build-ndk.yml  clang-check.yml  publish.yml
include/: capstone-utils.hpp  elf-utils.hpp  internal-loader.hpp  linker_namespaces.hpp  loader.hpp  log.h  modloader-calls.hpp  protect.hpp  runtime-restriction.hpp
include/linker/: linked_list.hpp  linker_common_types.hpp  linker_namespaces.hpp  macros.hpp
shared/: ModInfo.h  _config.h  c_api.h  constexpr-map.hpp  loader.hpp  modloader.h  modloader.hpp  mods.hpp  utils.hpp
src/: ModInfo.cpp  c_api.cpp  capstone-utils.cpp  elf-utils.cpp  loader.cpp  main.cpp  modloader.cpp  runtime-restriction.cpp  utils.cpp
test/: linux.cpp  tests.cpp  tests.hpp
test/early_mods/: t
